# cmake-external-library

./: CMakeLists.txt  Jenkinsfile  Makefile  README.md  build_blade_env.sh  build_centos_build_image.sh  build_drs_image.sh  build_image_common.sh  build_library_common.sh  build_ms_image.sh  build_newgcc_image.sh  build_nps_image.sh  build_rs_image.sh  build_thirdparty_build_image.sh  build_thirdparty_gpu_image.sh  build_thirdparty_newgcc_image.sh  check.cmake  check_version.cmake  common.cmake  compile  compile.sh  create_image.sh  create_library.sh  pipeline.sh  run_build_images.sh  run_build_library.sh  utils.cmake
DataFrame/: check.cmake
absl/: check.cmake
archive/: utils.cmake
aws-sdk-cpp/: check.cmake
bde/: check.cmake
benchmark/: check.cmake
blade-sdk/: check.cmake
boost/: check.cmake
c-ares/: check.cmake
cassandra-cpp-driver/: check.cmake
cmake/: check.cmake
concurrentqueue/: check.cmake
cppzmq/: check.cmake
cryptopp/: check.cmake
cuda/: check.cmake
curl/: check.cmake
czmq/: check.cmake
dbg_macro/: check.cmake
docker/: DockerfileCpp20  Dockerfile_aws_build  Dockerfile_blade  Dockerfile_build_drs  Dockerfile_centos_build  Dockerfile_gcc10_on_centos7_build  Dockerfile_gcc_on_centos_build  Dockerfile_ml_platform_dev  Dockerfile_newgcc_build  VERSIONS  config  dockerfile_mkl  pub-deploy  update-alternatives.sh
faiss/: check.cmake
flatbuffers/: check.cmake
fmt/: check.cmake
fp16/: check.cmake
gflags/: check.cmake
gperftools/: check.cmake
grpc/: check.cmake
gtest/: check.cmake
hiredis/: check.cmake
incubator-brpc/: check.cmake
json/: check.cmake
json11/: check.cmake
leveldb/: check.cmake  pack.sh
libconfig/: check.cmake
libcuckoo/: .gitignore  check.cmake
libevent/: check.cmake
libtorch/: check.cmake
libunwind/: check.cmake
libuv/: check.cmake
llvm/: .gitignore  check.cmake  polly.patch
log4cplus/: check.cmake
lz4/: check.cmake
mimalloc/: check.cmake
mkl/: check.cmake
ml_unity/: check.cmake
mongo-cxx-driver/: check.cmake  check_add.cmake
mxnet_sdk/: check.cmake
ninja/: check.cmake
online_debug_lib_cc/: check.cmake
openssl/: .gitignore  check.cmake
pai-blade/: check.cmake
patchelf/: check.cmake
ppconsul/: check.cmake
protobuf/: check.cmake
protobuf3/: check.cmake
psimd/: check.cmake
pybind11/: check.cmake
python2/: check.cmake
python3/: check.cmake
pytorch/: check.cmake
r3c/: check.cmake
rapidjson/: check.cmake
re2/: check.cmake
readerwriterqueue/: check.cmake
robin_map/: check.cmake
rocksdb/: check.cmake
scons/: check.cmake
scripts/: clean.sh  pack_git_repo.sh  sync-component-versions.py  update-path-refs.py
scylla-cpp-driver/: check.cmake
seastar/: check.cmake  (+1 more)
(+20 files in other folders)
